--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -53,6 +52,20 @@
       font-weight: bold;
       text-transform: uppercase;
     }
+    .blog-button {
+      display: block;
+      text-align: center;
+      margin: 30px auto;
+      font-size: 18px;
+      color: cyan;
+      border: 2px dashed cyan;
+      padding: 10px;
+      width: 200px;
+    }
+    .blog-button:hover {
+      background-color: cyan;
+      color: black;
+    }
   </style>
   <embed src="https://www.vgmusic.com/music/other/miscellaneous/midi/Baby_Snakes.mid" hidden="true" autostart="true" loop="true" />
 </head>
@@ -64,6 +77,8 @@
   <div class="container">
     <h1 class="glitch">Marshall Myerson</h1>
     <h2>Filmmaker / Bass Learner / Arena Dweller</h2>
+
+    <a class="blog-button" href="blog.html">VISIT THE BLOG</a>
 
     <div class="section">
       <h2>Marshall Myerson</h2>
@@ -89,13 +104,10 @@
         Welcome.
       </p>
     </div>
-
-    
   </div>
 
-    <div class="section">
-      <p><em>Note: If the punctuation looks wonky, it's because I suck at coding. But the message is still real.</em></p>
-    </div>
-
+  <div class="section">
+    <p><em>Note: If the punctuation looks wonky, it's because I suck at coding. But the message is still real.</em></p>
+  </div>
 </body>
 </html>
