--- a/dan-blocker.html
+++ b/dan-blocker.html
@@ -71,7 +71,7 @@
     <p>
 
     <p>
-      I don’t know what it means. Maybe nothing, but it’s real. I made it. He didn’t...and I don’t want to forget that.
+      I don’t know what it means, our connection. Me n' Dan. Maybe nothing, but it’s real. I made it. He didn’t...and I don’t want to forget that.
     </p>
 
     <p>
