--- a/postranch.html
+++ b/postranch.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <p><a href="index.html">&larr; Back to Blog</a></p>
+  <p><a href="blog.html">&larr; Back to Blog</a></p>
   <hr style="margin-bottom: 2rem;">
 
   <h1>How the Post Ranch Inn Skullfucked the Wild West</h1>
