--- a/postranch.html
+++ b/postranch.html
@@ -53,7 +53,7 @@
 
   <p>And Henry Miller? That overrated pretentious pig smeared his foul, fecal word salad all over the cliffs and called it “insight.” I call it “in-shite.” Ha…how ya like me now, Hank!? Oranges aren’t Bosch paintings, you insufferable bastard! They are citrus. Bosch has never been to Big Sur, neither has Dante. There was no medieval torment lurking in a Big Sur fruit stand, at least not when Hank Miller was there. Now…maybe. You didn’t unlock some new portal of higher consciousness—you just wouldn’t shut the fuck up…you and your fucking book have the blood of the Wild West on your hands.</p>
 
-  <p>Post Ranch guests eat that shit up. They read him like the Bible. Of course they do! They all want to be the maharaj of meaning while attending a very expensive Andre 3000 concert at…you guessed it! The Henry Miller center! Oh lucky day! Where Mr. 3000 played…the FUCKING FLUTE! The fucking flute! Why the hell would you learn a woodwind instrument that isn’t the Sax! Come on, we can still fix this…</p>
+  <p>Post Ranch guests eat that shit up. They read him like the Bible. Of course they do! They all want to be the maharaj of meaning while attending a very expensive Andre 3000 concert at…you guessed it! The Henry Miller Memorial Library, oh happy day! Mr. 3000 played…the FUCKING FLUTE! The fucking flute! Why the hell would you learn a woodwind instrument that isn’t the Sax! Come on, we can still fix this…</p>
 
   <p>Or perhaps not. Big Sur is no longer wild. It’s a Vuori vest in Ray-Bans and On sneakers taking cliffside selfies. Careful, ya might slip! Wouldn’t that be…something.</p>
 
