--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-
 <style>
 @keyframes hardcoreGlitch {
   0%   { transform: translate(0, 0) scale(1); text-shadow: 2px 0 red, -2px 0 blue; }
@@ -27,10 +27,20 @@
   background-color: #ff00ff;
   color: black;
 }
-</style>
 
-  <title>Marshall Myerson - Filmmaker</title>
-  <style>
+    .flaming-skull {
+      font-size: 2em;
+      animation: firePulse 1s infinite alternate;
+      color: red;
+      text-shadow: 0 0 10px orange, 0 0 20px red, 0 0 30px yellow;
+    }
+    @keyframes firePulse {
+      0% { transform: scale(1); }
+      100% { transform: scale(1.1); }
+    }
+    </style>
+<title>Marshall Myerson - Filmmaker</title>
+<style>
     body {
       background-color: black;
       color: lime;
@@ -95,50 +105,43 @@
       color: black;
     }
   </style>
-  <embed src="https://www.vgmusic.com/music/other/miscellaneous/midi/Baby_Snakes.mid" hidden="true" autostart="true" loop="true" />
+<embed autostart="true" hidden="true" loop="true" src="https://www.vgmusic.com/music/other/miscellaneous/midi/Baby_Snakes.mid"/>
 </head>
 <body>
-  <blink style="color:red; font-size: 18px; text-align: center; display: block; margin-top: 20px;">
+<blink style="color:red; font-size: 18px; text-align: center; display: block; margin-top: 20px;">
     ⚠️ TRANSMISSION FROM THE SHRINE ACTIVE ⚠️
   </blink>
-
-  <div class="container">
-    <h1 class="glitch">Marshall Myerson</h1>
-    <h2>Filmmaker / Bass Learner / Arena Dweller</h2>
-
-    <a class="blog-button" href="blog.html">VISIT THE BLOG</a>
-
-    <div class="section">
-      <h2>Marshall Myerson</h2>
-      <p>
+<div class="container">
+<h1 class="glitch">Marshall Myerson</h1>
+<h2>Filmmaker / Bass Learner / Arena Dweller</h2>
+<a class="blog-button" href="blog.html">VISIT THE BLOG</a><div style="text-align:center; margin-top:30px;"><span class="flaming-skull">💀</span><a class="blog-button" href="metallica-fan-club-firepulse.html" style="font-size: 16px; color: #ffcc00; font-weight: bold; letter-spacing: 1px; border: 2px solid #ffcc00; padding: 10px; display: inline-block; animation: firePulse 1s infinite alternate; text-shadow: 0 0 10px orange, 0 0 20px red, 0 0 30px yellow;">Marshall's Mega Unofficial Metallica Fan Club</a><span class="flaming-skull">💀</span></div>
+<div class="section">
+<h2>Marshall Myerson</h2>
+<p>
         I'm not a filmmaker by trade — I'm just a guy building his first film out of instinct, late nights, and whatever pieces of truth I can glue together before the caffeine wears off. It might be art. It might be evidence. Either way, I'm making it.
       </p>
-      <p>
+<p>
         My compass swings between Metallica's righteous force and Zappa's deranged brilliance. I'm trying to carve a path that lets both live side by side — the thunder and the brain melt. One hand on the riff, the other disassembling reality for spare parts.
       </p>
-      <p>
+<p>
         I work a lot. I write constantly. I practice bass with zero expectation of being good and every intention of getting dangerous. I've built shrines (actual ones — Cliff Burton has a candle-lit space in my home), coded websites with green text and bad intentions, and stayed up way too late trying to make strange things real.
       </p>
-      <p>
+<p>
         I'm sober. I'm stubborn. I'm loyal to my dog and my dreams in equal measure. I don't know if I'm building a career or just a signal tower for the other weirdos — but I'm out here, and I mean it.
       </p>
-      <p>
-        This site is not a brand. It's a flare.<br>
-        <br><br><strong>WARNING: DO NOT LICK THIS HTML.</strong><br>
+<p>
+        This site is not a brand. It's a flare.<br/>
+<br/><br/><strong>WARNING: DO NOT LICK THIS HTML.</strong><br/>
         Side effects may include groove, confusion, mild enlightenment, and the urge to pick up an instrument or leave the country.
       </p>
-      <p>
-        If you're still reading, you get it.<br>
+<p>
+        If you're still reading, you get it.<br/>
         Welcome.
       </p>
-    </div>
-  </div>
-
-  
-
-  <div class="section" style="text-align: center; margin-top: 100px;">
-  <a href="the-hole.html" class="glitch-leak">REALITY HAS... LEAKED</a>
 </div>
-
+</div>
+<div class="section" style="text-align: center; margin-top: 100px;">
+<a class="glitch-leak" href="the-hole.html">REALITY HAS... LEAKED</a>
+</div>
 </body>
 </html>
