--- a/metallica-fan-club-firepulse.html
+++ b/metallica-fan-club-firepulse.html
@@ -133,7 +133,7 @@
   <div class="cliff">
     <h3>Cliff Burton (1962–1986)</h3>
     <img src="burton.jpg" alt="Cliff Burton">
-    <p>The backbone of early Metallica and the soul of the underground. Cliff wasn’t just a bassist — he was a force of nature. His spirit echoes in every thunderous breakdown, every wailing solo, every fuck-you to conformity. Forever headbanging in the stars.</p>
+    <p>RIP CLIFF-ORION FOREVER</p>
   </div>
 
   <div class="napster">Lars sued me for downloading his music on Napster</div>
