--- a/metallica-fan-club-firepulse.html
+++ b/metallica-fan-club-firepulse.html
@@ -124,7 +124,7 @@
 
   <div class="flaming-logo">🔥 METALLICA 🔥</div>
 
-  <p>Welcome to the lair. This isn’t some polished fan page with merch links and fake hype. It’s just me — a guy who never shut up about Metallica and never plans to. If this thing feels a little unhinged, that’s because it is. But I care. Probably more than I should.</p>
+  <p>Marshall wuz here</p>
 
   <p class="metal"><a onclick="showTooBad()">Wanna join?</a></p>
 
